[project]
name = "askfm-api"
version = "0.2.0b1"
description = "Unofficial API wrapper for https://ask.fm"
readme = "README.md"
authors = [
    {name = "snowwm", email = "snowwontmelt@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests~=2.25",
]
dev-dependencies = [
    "black~=20.8b1",
    "isort~=5.7",
    "mypy~=0.812",
    "twine~=3.3",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/AskfmForHumans/askfm-api"

[tool.pdm.scripts]
format = {shell = "echo isort && isort . && echo black && black ."}
typecheck = "mypy --exclude __pypackages__ ."
publish = {shell = "pdm build && twine upload dist/*"}

[tool.isort]
profile = "black"
force_sort_within_sections = true
skip_gitignore = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
