[project]
name = "askfm-api"
version = {use_scm = true}
description = "Unofficial API wrapper for https://ask.fm"
license = {text = "MIT"}
readme = "README.md"
urls.homepage = "https://github.com/AskfmForHumans/askfm-api"
authors = [
    {name = "snowwm", email = "snowwontmelt@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests~=2.25",
]
requires-python = ">=3.9"
dynamic = ["classifiers", "version"]

[tool.pdm.dev-dependencies]
dev = [
    "black~=20.8b1",
    "isort~=5.7",
    "mypy~=0.812",
    "twine~=3.3",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true
skip_gitignore = true
